# prova/storage/api-docs/api-docs.json
@@ -81,6 +81,151 @@
                 }
             }
         },
+        "/api/v0/perfis": {
+            "post": {
+                "tags": [
+                    "Index"
+                ],
+                "summary": "Create Perfil",
+                "operationId": "44b6ab8046eb0aa8056858f990f856d3",
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "": {
+                                        "properties": {
+                                            "title": {
+                                                "type": "string"
+                                            },
+                                            "content": {
+                                                "type": "string"
+                                            }
+                                        },
+                                        "type": "object"
+                                    }
+                                },
+                                "type": "object",
+                                "example": {
+                                    "tipos_sanguineo_id": 6,
+                                    "signo_id": 2,
+                                    "cpf": 2255881568,
+                                    "nome": "João",
+                                    "data_nascimento": "1986-06-14",
+                                    "email": "joao@yahoo.com",
+                                    "formacao": [
+                                        {
+                                            "instituicao_id": 1,
+                                            "nome": "SI"
+                                        },
+                                        {
+                                            "instituicao_id": 1,
+                                            "nome": "GTI"
+                                        }
+                                    ],
+                                    "experiencia": [
+                                        {
+                                            "empresa": "Google",
+                                            "inicio": "2000-06-14",
+                                            "fim": "2010-06-14",
+                                            "atual_trabalho": "STT",
+                                            "cargo": "Programador"
+                                        },
+                                        {
+                                            "empresa": "FANESE",
+                                            "inicio": "2010-06-14",
+                                            "fim": "2020-06-14",
+                                            "atual_trabalho": "STT",
+                                            "cargo": "Programador"
+                                        }
+                                    ],
+                                    "competencia": {
+                                        "competencia_id": 1,
+                                        "perfil_id": 1
+                                    },
+                                    "telefone": 79988496433,
+                                    "resumo": "texto"
+                                }
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "success",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "id": {
+                                            "type": "number",
+                                            "example": 1
+                                        },
+                                        "tipos_sanguineo_id": {
+                                            "type": "number",
+                                            "example": "2"
+                                        },
+                                        "signo_id": {
+                                            "type": "number",
+                                            "example": "3"
+                                        },
+                                        "cpf": {
+                                            "type": "string",
+                                            "example": "content"
+                                        },
+                                        "nome": {
+                                            "type": "string",
+                                            "example": "Wagner Ramos Lima"
+                                        },
+                                        "email": {
+                                            "type": "string",
+                                            "example": "wagner@yahoo.com.br"
+                                        },
+                                        "telefone": {
+                                            "type": "string",
+                                            "example": "79999590102"
+                                        },
+                                        "resumo": {
+                                            "type": "string",
+                                            "example": "Exemplo de texto para resumo."
+                                        },
+                                        "data_nascimento": {
+                                            "type": "string",
+                                            "example": "1986-06-14"
+                                        },
+                                        "updated_at": {
+                                            "type": "string",
+                                            "example": "2021-12-11T09:25:53.000000Z"
+                                        },
+                                        "created_at": {
+                                            "type": "string",
+                                            "example": "2021-12-11T09:25:53.000000Z"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "invalid",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "msg": {
+                                            "type": "string",
+                                            "example": "fail"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/api/v0/perfis/{id}": {
             "get": {
                 "tags": [
